[package]
name = "libsio2jail"
description = "A Rust reimplementation sio2jail - a tool for supervising execution of programs submitted in algorithmic competitions"
repository = "https://github.com/MikolajKolek/libsio2jail"
homepage = "https://github.com/MikolajKolek/libsio2jail"
authors = ["Mikołaj Kołek"]
readme = "README.md"
license = "MIT"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.158"
perf-event-open-sys = "4.0.0"
sysctl = "0.5.5"
thiserror = "1.0.63"
enumset = "1.1.5"
cvt = "0.1.2"
readonly = "0.2.12"
nix = { version = "0.29.0", features = ["poll", "fs", "process"] }