[package]
name = "perfjail"
description = "A library for supervising the execution of programs in algorithmic competitions, inspired by sio2jail - a tool used by the Polish Olympiad in Informatics"
repository = "https://github.com/MikolajKolek/perfjail"
homepage = "https://github.com/MikolajKolek/perfjail"
documentation = "https://docs.rs/perfjail"
categories = ["virtualization"]
authors = ["Mikołaj Kołek"]
readme = "README.md"
license = "MIT"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.159"
perf-event-open-sys = "4.0.0"
sysctl = "0.6.0"
thiserror = "1.0.64"
enumset = "1.1.5"
cvt = "0.1.2"
readonly = "0.2.12"
nix = { version = "0.29.0", features = ["poll", "fs", "process", "signal"] }