[package]
name = "perfjail"
description = "A library for supervising the execution of programs in algorithmic competitions, inspired by sio2jail - a tool used by the Polish Olympiad in Informatics"
repository = "https://github.com/MikolajKolek/perfjail"
homepage = "https://github.com/MikolajKolek/perfjail"
documentation = "https://docs.rs/perfjail"
categories = ["virtualization"]
authors = ["Mikołaj Kołek"]
readme = "README.md"
license = "MIT"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.172"
perf-event-open-sys = "5.0.0"
sysctl = "0.6.0"
thiserror = "2.0.12"
enumset = "1.1.6"
cvt = "0.1.2"
readonly = "0.2.13"
nix = { version = "0.30.1", features = ["poll", "fs", "process", "signal", "ptrace"] }
litemap = "0.8.0"
linear-map = "1.2.0"